Fixed minor CSS issue on smaller screens

--- a/graphs/static/graphs/css/base.css
+++ b/graphs/static/graphs/css/base.css
@@ -2,7 +2,7 @@
 
 /* skeleton of the webpage */
 html, body { 
-    height: 100%; 
+    height: 98%; 
     width: 100%; 
     padding: 0; 
     margin: 0; 
